# A.Spotify-PI---FastApi

./: .env-semple  .gitignore  Makefile  README.MD  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
app/: startup.py
app/api/authentication/: controller.py  router.py  schemas.py
app/api/ranking/: controller.py  router.py  schemas.py
app/api/spotify/: controller.py  router.py  schemas.py
app/api/user/: controller.py  router.py
app/database/: session.py
app/models/: artist.py  ranking.py  results.py  user.py
app/utils/: exceptions.py  generic_controller.py  security.py  settings.py
migrations/: env.py
migrations/versions/: 0b5c1b27865c_create_table_artist.py  227fcdefcdf2_create_coluna_artist_id_e_genero.py  7ea3bc3ef34b_create_ranking_model.py  a93229511c16_alter_column_qnt_seguidores_table_artist.py  e29b76565839_create_models.py
tests/: conftest.py  test_spotify.py  test_users.py
